--- a/frontend/kontakt.html
+++ b/frontend/kontakt.html
@@ -3,19 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SSG Roethenbach 1898</title>
+    <title>SSG Roethenbach 1898 - Aktuelles</title>
 
-    <link rel="stylesheet" href="/static/styles/light.css">
+    <script type="module" src="/static/scripts/components.js"></script>
+    <link rel="stylesheet" href="/static/styles/style.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" 
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>    
     <navigation-menu></navigation-menu>
     <div class="container">
-        <simple-greeting name="Gino"></simple-greeting>
+        <contact-form></contact-form>
     </div>
     
-    <script type="module" src="/static/scripts/components.js"></script>
     <script>
         $(document).ready(function() {
             // Load greeting from backend
