--- a/frontend/impressum-datenschutz.html
+++ b/frontend/impressum-datenschutz.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SSG Roethenbach 1898 - Aktuelles</title>
+    <title>SSG R&ouml;thenbach 1898 - Aktuelles</title>
+    <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/static/img/favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="/static/styles/style.css">
     <script type="module" src="/static/scripts/components.js"></script>
@@ -36,5 +38,6 @@
             <br>E-Mail: asdfasdfasdf
         </content-card>
     </div>
+    <footer-content></footer-content>
 </body>
 </html>
