--- a/frontend/404.html
+++ b/frontend/404.html
@@ -4,14 +4,19 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SSG R&ouml;thenbach 1898</title>
+        <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/static/img/favicon.ico" type="image/x-icon">
 
         <link rel="stylesheet" href="/static/styles/style.css">
+        <script type="module" src="/static/scripts/components.js"></script>
     </head>
     <body>
+        <navigation-menu></navigation-menu>
         <div class="notfound">
             <img src="/static/img/404.png" style="border-radius: 8px; max-width: 50%; height: 50%;"></img>
-            <h2></h2>
-            <a href="/" style="font-weight: bolder; font-size: larger;">Seite nicht gefunden! &#128557;</a>
+            <h2>
+                Seite nicht gefunden! &#128557;
+            </h2>
         </div>
     </body>
 </html>
