--- a/frontend/der-verein.html
+++ b/frontend/der-verein.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SSG Roethenbach 1898 - Aktuelles</title>
+    <title>SSG R&ouml;thenbach 1898 - Aktuelles</title>
+    <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/static/img/favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="/static/styles/style.css">
     <script type="module" src="/static/scripts/components.js"></script>
@@ -15,13 +17,13 @@
 </head>
 <body>    
     <navigation-menu></navigation-menu>
-    <div class="container">
+    <div class="container"  class="sticky-bottom">
         <content-card title="Gautreffen #2" date="02.02.2025">
             <div>
                 <br>Am <b>30.05.2025</b> findet das n&auml;chste Gautreffen in N&uuml;rnberg statt.
                 <br>Wir freuen uns auf zahlreiche Teilnehmer und ein spannendes Turnier.
                 <br>Die Anmeldung ist ab sofort m&ouml;glich.
-                <p/>
+                <p>
                 <br>Wir freuen uns auf euch!
                 <br>Euer SSG Roethenbach 1898
             </div>
@@ -31,11 +33,13 @@
                 <br>Am <b>30.05.2025</b> findet das n&auml;chste Gautreffen in N&uuml;rnberg statt.
                 <br>Wir freuen uns auf zahlreiche Teilnehmer und ein spannendes Turnier.
                 <br>Die Anmeldung ist ab sofort m&ouml;glich.
-                <p/>
+                <p>
                 <br>Wir freuen uns auf euch!
                 <br>Euer SSG Roethenbach 1898
             </div>
         </content-card>
     </div>
+
+    <footer-content></footer-content>
 </body>
 </html>
