--- a/frontend/kontakt.html
+++ b/frontend/kontakt.html
@@ -14,13 +14,47 @@
         rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <style>
+      html,
+      body {
+          height: 100%;
+          margin: 0;
+          overflow: hidden;
+      }
+
+      .wrapper {
+        min-height: 100%;
+      }
+
+      .main {
+        padding: 1em;
+      }
+    </style>
 </head>
-<body>    
+<body>
     <navigation-menu></navigation-menu>
-    <contact-form></contact-form>
+    <div class="wrapper">
+      <main>
+        <contact-form></contact-form>
+      </main>
+    </div>
+    <div class="push"></div>
     <footer-content></footer-content>
 </body>
 <script>
+      $(document).ready(function () {
+        $(window).resize(function () {
+            var footerHeight = $("footer-content").outerHeight();
+            var stickFooterPush = $(".push").height(footerHeight);
+            $(".wrapper").css({
+                marginBottom: "-" + stickFooterPush.outerHeight() + "px",
+            });
+        });
+
+        $(window).resize();
+    });
+
     (() => {
         'use strict'
       
