Disable right-click context menu on multiple HTML pages for improved user experience

--- a/frontend/404.html
+++ b/frontend/404.html
@@ -16,7 +16,7 @@
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     </head>
-    <body>
+    <body oncontextmenu="return false;">
         <navigation-menu></navigation-menu>
         <div class="notfound">
             <img src="/static/img/404.png" style="border-radius: 8px; max-width: 50%; height: 50%;"></img>
