--- a/frontend/kontakt.html
+++ b/frontend/kontakt.html
@@ -23,7 +23,7 @@
       }
     </style>
 </head>
-<body>
+<body oncontextmenu="return false;">
     <navigation-menu></navigation-menu>
     <div class="wrapper">
       <main>
