Update 404 error page text and add backup image for improved user experience

--- a/frontend/404.html
+++ b/frontend/404.html
@@ -21,7 +21,7 @@
         <div class="notfound">
             <img src="/static/img/404.png" style="border-radius: 8px; max-width: 50%; height: 50%;"></img>
             <h2>
-                Seite nicht gefunden! &#128557;
+                Ups, 404. Nicht getroffen. ☹️
             </h2>
         </div>
     </body>
