Refactor helper functions to consolidate initialization logic and improve code readability

--- a/frontend/404.html
+++ b/frontend/404.html
@@ -26,8 +26,8 @@
         </div>
     </body>
     <script type="module">
-      import { setTheme } from '/static/scripts/helper.js';
+      import { init } from '/static/scripts/helper.js';
     
-      setTheme();
+      init();
     </script>
 </html>
