--- a/frontend/kontakt.html
+++ b/frontend/kontakt.html
@@ -34,9 +34,8 @@
     <footer-content></footer-content>
 </body>
 <script type="module">
-  import { resizeWithFooter, setTheme } from '/static/scripts/helper.js';
+  import { init } from '/static/scripts/helper.js';
 
-  setTheme();
-  resizeWithFooter();
+  init();
 </script>
 </html>
