Add new images and enhance content for shooting sports sections in der-verein.html

--- a/frontend/der-verein.html
+++ b/frontend/der-verein.html
@@ -20,25 +20,41 @@
     <navigation-menu></navigation-menu>
     <div class="container wrapper">
         <main>
-          <content-card title="Gautreffen #2" date="02.02.2025">
+          <content-card title="Gewehr -und Pistolenschützen" date="">
             <div>
-                <br>Am <b>30.05.2025</b> findet das n&auml;chste Gautreffen in N&uuml;rnberg statt.
-                <br>Wir freuen uns auf zahlreiche Teilnehmer und ein spannendes Turnier.
-                <br>Die Anmeldung ist ab sofort m&ouml;glich.
-                <p>
-                <br>Wir freuen uns auf euch!
-                <br>Euer SSG Roethenbach 1898
+                <div class="row">
+                    <div class="col">
+                        <p>
+                            <b>Unsere Gewehr-und Pistolenschützen Schießen auf einer Elektronischen Anlage der Firma Sius.<br>
+                            Wir haben insgesamt 13 Luftdruckstände zur Verfügung, seit neuestem haben wir auch ein Lichtgewehr und eine Lichtpistole für die jüngsten zur Vervollständigung unseres Angebotes.</b>
+                        </p>
+
+                        <p>
+                            Des Weiteren haben wir eine neu renovierte 25-Meter-Halle für unsere Sportpistolenschützen, und eine 50-Meter-Halle für unsere Kleinkaliberschützen.
+                        </p>
+                    </div>
+                    <div class="col">
+                        <img src="/static/img/ssgr-transparent.svg" 
+                            class="img-fluid" alt="Vereinslogo Gewehr- und Pistolenschützen" role="img">
+                    </div>
+                </div>
             </div>
           </content-card>
-          <content-card title="Gautreffen" date="22.01.2025">
-              <div>
-                  <br>Am <b>30.05.2025</b> findet das n&auml;chste Gautreffen in N&uuml;rnberg statt.
-                  <br>Wir freuen uns auf zahlreiche Teilnehmer und ein spannendes Turnier.
-                  <br>Die Anmeldung ist ab sofort m&ouml;glich.
-                  <p>
-                  <br>Wir freuen uns auf euch!
-                  <br>Euer SSG Roethenbach 1898
-              </div>
+          <content-card title="Bogenschützen" date="">
+            <div>
+                <div class="row">
+                    <div class="col">
+                        <p>
+                            <b>Unsere Bogenschützen sind in der kalten Jahreszeit in unserer 25-Meter-Halle zu finden,<br> 
+                            im Sommer zumeist auf unserer großzügigen Bogenwiese im freien, auf der auch verschiedene Meisterschaften ausgerichtet werden.</b>
+                        </p>
+                    </div>
+                    <div class="col">
+                        <img src="/static/img/ssgr-bogenschützen-transparent.svg"
+                            class="img-fluid" alt="Vereinslogo Gewehr- und Pistolenschützen" role="img">
+                    </div>
+                </div>
+            </div>
           </content-card>
         </main>
     </div>
