--- a/frontend/404.html
+++ b/frontend/404.html
@@ -18,8 +18,8 @@
     </head>
     <body oncontextmenu="return false;">
         <navigation-menu></navigation-menu>
-        <div class="notfound">
-            <img src="/static/img/404.png" style="border-radius: 8px; max-width: 50%; height: 50%;"></img>
+        <div class="notfound container mt-5">
+            <img src="/static/img/404.png" style="max-width: 50%; max-height: 50%;"></img>
             <h2>
                 Ups, 404. Nicht getroffen. ☹️
             </h2>
