--- a/frontend/404.html
+++ b/frontend/404.html
@@ -21,7 +21,7 @@
         <div class="notfound container mt-5">
             <img src="/static/img/404.png" style="max-width: 50%; max-height: 50%;"></img>
             <h2>
-                Ups, 404. Nicht getroffen. ☹️
+                Ups, 404. Nicht getroffen. 🏹
             </h2>
         </div>
     </body>
