--- a/frontend/404.html
+++ b/frontend/404.html
@@ -20,9 +20,7 @@
         <navigation-menu></navigation-menu>
         <div class="notfound container mt-5">
             <img src="/static/img/404.png" style="max-width: 50%; max-height: 50%;"></img>
-            <h2>
-                Ups, 404. Nicht getroffen. 🏹
-            </h2>
+            <h2>Ups, 404. Nicht getroffen. 🏹</h2>
         </div>
     </body>
     <script type="module">
