--- a/frontend/der-verein.html
+++ b/frontend/der-verein.html
@@ -18,6 +18,7 @@
 </head>
 <body oncontextmenu="return false;">    
     <navigation-menu></navigation-menu>
+    <gallery-carousel></gallery-carousel>
     <div class="container wrapper">
         <main>
           <content-card title="Gewehr -und Pistolenschützen" date="">
