Improve gallery carousel caption for clarity and enhance styling for better visibility

--- a/frontend/der-verein.html
+++ b/frontend/der-verein.html
@@ -26,8 +26,8 @@
                 <div class="row">
                     <div class="col">
                         <p>
-                            <b>Unsere Gewehr-und Pistolenschützen Schießen auf einer Elektronischen Anlage der Firma Sius.<br>
-                            Wir haben insgesamt 13 Luftdruckstände zur Verfügung, seit neuestem haben wir auch ein Lichtgewehr und eine Lichtpistole für die jüngsten zur Vervollständigung unseres Angebotes.</b>
+                            <b>Unsere Gewehr-und Pistolenschützen schießen auf einer elektronischen Anlage der Firma Sius.<br>
+                            Wir haben insgesamt 13 Luftdruckstände zur verfügung, seit neuestem haben wir auch ein Lichtgewehr und eine Lichtpistole für die jüngsten zur Vervollständigung unseres Angebotes.</b>
                         </p>
 
                         <p>
@@ -47,7 +47,7 @@
                     <div class="col">
                         <p>
                             <b>Unsere Bogenschützen sind in der kalten Jahreszeit in unserer 25-Meter-Halle zu finden,<br> 
-                            im Sommer zumeist auf unserer großzügigen Bogenwiese im freien, auf der auch verschiedene Meisterschaften ausgerichtet werden.</b>
+                            im Sommer zumeist auf unserer großzügigen Bogenwiese im Freien, auf der auch verschiedene Meisterschaften ausgerichtet werden.</b>
                         </p>
                     </div>
                     <div class="col">
