--- a/frontend/aktuelles.html
+++ b/frontend/aktuelles.html
@@ -20,50 +20,11 @@
     <navigation-menu></navigation-menu>
     <div class="container wrapper">
         <main>
-          <content-card title="Info" date="02.02.2025">
+          <content-card title="Vereinsmeisterschaft 2024" date="">
             <div>
-                Aktuell sind keine Neuigkeiten vorhanden.
+                <img src="/static/img/aktuelles/vereinsmeisterschaft-2024.jpg" 
+                    class="img-fluid" alt="Vereinsmeisterschaft 2024" role="img" height="400">
             </div>
-          </content-card>
-          <content-card title="Gautreffen" date="22.01.2025">
-              <div>
-                  <br>Am <b>30.05.2025</b> findet das n&auml;chste Gautreffen in N&uuml;rnberg statt.
-                  <br>Wir freuen uns auf zahlreiche Teilnehmer und ein spannendes Turnier.
-                  <br>Die Anmeldung ist ab sofort m&ouml;glich.
-                  <p>
-                  <br>Wir freuen uns auf euch!
-                  <br>Euer SSG Roethenbach 1898
-              </div>
-          </content-card>
-          <content-card title="Gautreffen" date="22.01.2025">
-              <div>
-                  <br>Am <b>30.05.2025</b> findet das n&auml;chste Gautreffen in N&uuml;rnberg statt.
-                  <br>Wir freuen uns auf zahlreiche Teilnehmer und ein spannendes Turnier.
-                  <br>Die Anmeldung ist ab sofort m&ouml;glich.
-                  <p>
-                  <br>Wir freuen uns auf euch!
-                  <br>Euer SSG Roethenbach 1898
-              </div>
-          </content-card>
-          <content-card title="Gautreffen" date="22.01.2025">
-              <div>
-                  <br>Am <b>30.05.2025</b> findet das n&auml;chste Gautreffen in N&uuml;rnberg statt.
-                  <br>Wir freuen uns auf zahlreiche Teilnehmer und ein spannendes Turnier.
-                  <br>Die Anmeldung ist ab sofort m&ouml;glich.
-                  <p>
-                  <br>Wir freuen uns auf euch!
-                  <br>Euer SSG Roethenbach 1898
-              </div>
-          </content-card>
-          <content-card title="Gautreffen" date="22.01.2025">
-              <div>
-                  <br>Am <b>30.05.2025</b> findet das n&auml;chste Gautreffen in N&uuml;rnberg statt.
-                  <br>Wir freuen uns auf zahlreiche Teilnehmer und ein spannendes Turnier.
-                  <br>Die Anmeldung ist ab sofort m&ouml;glich.
-                  <p>
-                  <br>Wir freuen uns auf euch!
-                  <br>Euer SSG Roethenbach 1898
-              </div>
           </content-card>
         </main>
     </div>
