Refactor HTML titles for consistency and clarity; update EmailService message formatting and add Bootstrap and jQuery scripts to components

--- a/public-frontend/impressum-datenschutz.html
+++ b/public-frontend/impressum-datenschutz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SSG R&ouml;thenbach 1898 - Aktuelles</title>
+    <title>SSG R&ouml;thenbach 1898 - Impressum &amp; Datenschutz</title>
     <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/static/img/favicon.ico" type="image/x-icon">
 
