--- a/public-frontend/kontakt.html
+++ b/public-frontend/kontakt.html
@@ -27,6 +27,10 @@
     <navigation-menu></navigation-menu>
     <div class="wrapper">
       <main>
+        <div class="container-fluid p-2 m-3 w-auto bg-body-secondary">
+          Bei Fragen aller Art oder um ein Probetraining zu vereinbaren, nutzen Sie bitte das Kontaktformular.<br/>
+          Wir freuen uns über Ihre Nachricht!
+        </div>
         <contact-form></contact-form>
       </main>
     </div>
